--- a/src/components/CampoTexto/CampoTexto.css
+++ b/src/components/CampoTexto/CampoTexto.css
@@ -1,11 +1,13 @@
 .campo-texto {
-    margin: 1.5rem 0;
+    margin: 30px 0;
 }
 
 .campo-texto label {
     display: block;
     margin-bottom: .5rem;
-    font-size: 1.2rem;
+    font-size: 18px;
+    color: #212121;
+    font-weight: 600;
 }
 
 .campo-texto input {
@@ -14,6 +16,10 @@
     width: 100%;
     border: none;
     font-size: 1.2rem;
-    padding: 1.5rem;
+    padding: 30px;
     box-sizing: border-box;
+}
+
+.campo-texto input::placeholder {
+    color: #AFAFAF;
 }
