--- a/src/components/Formulario/Formulario.css
+++ b/src/components/Formulario/Formulario.css
@@ -8,6 +8,11 @@
     max-width: 80%;
     background-color: #F2F2F2;
     border-radius: 20px;
-    padding: 36px 64px;
+    padding: 32px 96px;
     box-shadow: 8px 8px 16px rgba(0, 0, 0, 0.08);
+}
+
+.formulario form h2 {
+    font-size: 32px;
+    color: #212121;
 }
