--- a/src/components/CampoTexto/CampoTexto.css
+++ b/src/components/CampoTexto/CampoTexto.css
@@ -1,25 +1,25 @@
 .campo-texto {
-    margin: 30px 0;
+  margin: 1.875rem 0;
 }
 
 .campo-texto label {
-    display: block;
-    margin-bottom: .5rem;
-    font-size: 18px;
-    color: #212121;
-    font-weight: 600;
+  display: block;
+  margin-bottom: 0.5rem;
+  font-size: 1.125rem;
+  color: #212121;
+  font-weight: 600;
 }
 
 .campo-texto input {
-    background-color: #FFF;
-    box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.06);
-    width: 100%;
-    border: none;
-    font-size: 1.2rem;
-    padding: 30px;
-    box-sizing: border-box;
+  background-color: #fff;
+  box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.06);
+  width: 100%;
+  border: none;
+  font-size: 1.2rem;
+  padding: 1.875rem;
+  box-sizing: border-box;
 }
 
 .campo-texto input::placeholder {
-    color: #AFAFAF;
+  color: #afafaf;
 }
