--- a/src/components/Formulario/Formulario.css
+++ b/src/components/Formulario/Formulario.css
@@ -1,18 +1,18 @@
 .formulario {
-    display: flex;
-    justify-content: center;
-    margin: 80px 0;
+  display: flex;
+  justify-content: center;
+  margin: 5rem 0;
 }
 
 .formulario form {
-    max-width: 80%;
-    background-color: #F2F2F2;
-    border-radius: 20px;
-    padding: 32px 96px;
-    box-shadow: 8px 8px 16px rgba(0, 0, 0, 0.08);
+  max-width: 80%;
+  background-color: #f2f2f2;
+  border-radius: 1.25rem;
+  padding: 2rem 6rem;
+  box-shadow: 8px 8px 16px rgba(0, 0, 0, 0.08);
 }
 
 .formulario form h2 {
-    font-size: 32px;
-    color: #212121;
+  font-size: 2rem;
+  color: #212121;
 }
