--- a/src/components/ListaSuspensa/ListaSuspensa.css
+++ b/src/components/ListaSuspensa/ListaSuspensa.css
@@ -1,13 +1,9 @@
-.lista-suspensa {
-    
-}
-
 .lista-suspensa select {
-    background-color: #FFF;
-    box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.06);
-    width: 100%;
-    border: none;
-    font-size: 1.2rem;
-    padding: 30px;
-    box-sizing: border-box;
+  background-color: #fff;
+  box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.06);
+  width: 100%;
+  border: none;
+  font-size: 1.2rem;
+  padding: 1.875rem;
+  box-sizing: border-box;
 }
