Adicionando colaboradores aos times

--- a/src/components/Colaborador/Colaborador.css
+++ b/src/components/Colaborador/Colaborador.css
@@ -17,8 +17,8 @@
     background: #FFFFFF;
     box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.08);
     border-radius: 0px 0px 10px 10px;
-    padding-top: 90px;
-    padding-bottom: 40px;
+    padding-top: 50px;
+    padding-bottom: 20px;
 }
 
 .colaborador .rodape h4 {
@@ -32,6 +32,8 @@
 .colaborador .rodape h5 {
     font-size: 18px;
     line-height: 22px;
+    margin: 0 0 30px 0;
     color: #212121;
     padding: 0 16px;
+    font-weight: 500;
 }
