--- a/src/components/Time/Time.css
+++ b/src/components/Time/Time.css
@@ -9,3 +9,10 @@
     display: inline-block;
     padding-bottom: .5rem;
 }
+
+.time .colaboradores {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 2rem;
+    flex-wrap: wrap;
+}
