--- a/src/components/Colaborador/Colaborador.css
+++ b/src/components/Colaborador/Colaborador.css
@@ -18,7 +18,6 @@
     box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.08);
     border-radius: 0px 0px 10px 10px;
     padding-top: 50px;
-    padding-bottom: 20px;
 }
 
 .colaborador .rodape h4 {
@@ -34,6 +33,6 @@
     line-height: 22px;
     margin: 0 0 30px 0;
     color: #212121;
-    padding: 0 16px;
+    padding: 0 32px 32px 32px;
     font-weight: 500;
 }
