--- a/src/components/Colaborador/Colaborador.css
+++ b/src/components/Colaborador/Colaborador.css
@@ -1,38 +1,59 @@
 .colaborador {
-    width: 280px;
+  width: 280px;
 }
 
 .colaborador .cabecalho {
-    background-color:  #F0F0F0;
-    border-radius: 10px 10px 0px 0px;
+  background-color: #f0f0f0;
+  border-radius: 10px 10px 0px 0px;
 }
 .colaborador img {
-    width: 100px;
-    border-radius: 50%;
-    position: relative;
-    bottom: -50px;
+  width: 100px;
+  border-radius: 50%;
+  position: relative;
+  bottom: -50px;
+  object-fit: cover;
+  max-height: 100px;
 }
 
 .colaborador .rodape {
-    background: #FFFFFF;
-    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.08);
-    border-radius: 0px 0px 10px 10px;
-    padding-top: 50px;
+  background: #ffffff;
+  box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.08);
+  border-radius: 0px 0px 10px 10px;
+  padding-top: 50px;
 }
 
 .colaborador .rodape h4 {
-    color: #6278F7;
-    font-size: 18px;
-    line-height: 22px;
-    font-weight: bold;
-    margin-bottom: 8px;
+  color: #6278f7;
+  font-size: 18px;
+  line-height: 22px;
+  font-weight: bold;
+  margin-bottom: 8px;
 }
 
 .colaborador .rodape h5 {
-    font-size: 18px;
-    line-height: 22px;
-    margin: 0 0 30px 0;
-    color: #212121;
-    padding: 0 32px 32px 32px;
-    font-weight: 500;
+  margin: 0;
+  padding: 0;
+}
+.colaborador .rodape h5 {
+  font-size: 18px;
+  line-height: 22px;
+  color: #212121;
+  font-weight: 500;
+}
+
+.colaborador .rodape .btn__deletar {
+  width: 100%;
+  display: flex;
+  flex-direction: row-reverse;
+}
+
+.btn__deletar button {
+  margin: 1rem 1rem 1.5rem 0;
+  padding: 0.5rem 1rem;
+  border: none;
+  font-weight: 700;
+  font-size: 0.9rem;
+  color: #ffffff;
+  cursor: pointer;
+  border-radius: 0.3rem;
 }
