Adicionando novas funcionalidades e deixando o  projeto com a minha cara

--- a/src/components/Rodape/Rodape.css
+++ b/src/components/Rodape/Rodape.css
@@ -1,5 +1,5 @@
 .footer {
-    background-color: #6278F7;
+    background-color: #FCE561;
     background-image: url(../../../public/images/fundo.png);
     width: 100%;
     display: flex;
