--- a/src/components/Botao/Botao.css
+++ b/src/components/Botao/Botao.css
@@ -1,5 +1,5 @@
 .Botao {
-  background-color: #6278f7;
+  background-color: #FCE561;
   border-radius: 0.625rem;
   font-weight: 700;
   font-size: 1.25rem;
@@ -12,5 +12,5 @@
 
 .Botao:hover {
   transition: color 0.7s;
-  color: #95ffd4;
+  color: #000000;
 }
