--- a/src/components/ListaSuspensa/ListaSuspensa.css
+++ b/src/components/ListaSuspensa/ListaSuspensa.css
@@ -7,3 +7,11 @@
   padding: 1.875rem;
   box-sizing: border-box;
 }
+
+.lista-suspensa label {
+  display: block;
+  margin-bottom: 0.5rem;
+  font-size: 1.125rem;
+  color: #212121;
+  font-weight: 600;
+}
