--- a/src/components/Colaborador/Colaborador.css
+++ b/src/components/Colaborador/Colaborador.css
@@ -7,12 +7,14 @@
   border-radius: 10px 10px 0px 0px;
 }
 .colaborador img {
-  width: 100px;
+  min-width: 100px;
+  max-width: 100px;
   border-radius: 50%;
   position: relative;
   bottom: -50px;
-  object-fit: cover;
   max-height: 100px;
+  min-height: 100px;
+  object-fit: cover;
 }
 
 .colaborador .rodape {
@@ -23,7 +25,6 @@
 }
 
 .colaborador .rodape h4 {
-  color: #6278f7;
   font-size: 18px;
   line-height: 22px;
   font-weight: bold;
