--- a/src/components/Rodape/Rodape.css
+++ b/src/components/Rodape/Rodape.css
@@ -1,6 +1,6 @@
 .footer {
     background-color: #FCE561;
-    background-image: url(../../../public/images/fundo.png);
+    background-image: url(../../../public/images/Rodapé.png);
     width: 100%;
     display: flex;
     justify-content: space-around;
