--- a/src/components/Categoria/Categoria.css
+++ b/src/components/Categoria/Categoria.css
@@ -1,9 +1,9 @@
-.time {
+.categoria {
     text-align: center;
     padding: 2rem;
 }
 
-.time h3 {
+.categoria h3 {
     font-size: 2rem;
     padding-bottom: .5rem;
     display: flex;
@@ -11,13 +11,13 @@
     flex-direction: column;
 }
 
-.time .border__bottom {
+.categoria .border__bottom {
     width: 32px;
     height: 4px;
     margin-top: 12px;
 }
 
-.time .colaboradores {
+.categoria .personagens {
     display: flex;
     justify-content: space-around;
     margin-top: 2rem;
